fixed double text-align

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,7 +3,6 @@
   font-size: 14px;
   line-height: 1.14;
   font-weight: 400;
-  text-align: center;
   margin: 0 auto;
   padding: 0;
   max-width: 288px;
